--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,10 @@ ervmancer = "ervmancer.main:main"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
+include_package_data = true
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+"ervmancer" = ["data/*.bed"]
