Remove data files used for compilation and ignore in .gitignore. Update pyproject and MANIFEST file to reflect new data used in package. Modified main to add the import needed for kmer method

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,6 @@
 recursive-include src/ervmancer *.py
 recursive-include src/ervmancer/data *.bed
+recursive-include src/ervmancer/data *.pkl
+recursive-include src/ervmancer/data *.pickle
 include LICENSE
 include README.md
