feature: modify yaml to get rid of commands we know work. add lca to preprocessing as it is shared by the two methods. add resolve_reads for the csv export

--- a/meta.yaml
+++ b/meta.yaml
@@ -30,14 +30,13 @@ requirements:
     - bowtie2
     - samtools
     - bedtools
+    - numpy
+    - pandas
     - tqdm
 
 test:
   commands:
     - ervmancer --help
-    - bowtie2 --help
-    - samtools --help
-    - bedtools --help
 
 about:
   home: https://github.com/AuslanderLab/ervmancer
