--- a/meta.yaml
+++ b/meta.yaml
@@ -12,7 +12,7 @@ build:
   number: 0
   no_git_env_vars: True
   noarch: python
-  script: "{{ PYTHON }} -m pip install . --ignore-installed --no-deps"
+  script: "{{ PYTHON }} -m pip install . --no-deps --no-build-isolation --no-cache-dir -vvv"
   entry_points:
     - ervrmancer = ervmancer.main:main
 
@@ -44,13 +44,11 @@ about:
   license: MIT
   license_family: MIT
   license_file: LICENSE
-  summary: 'ERV identification tool using bowtie2, samtools, and bedtools'
-  description: |
-    ervmancer is a tool for identifying and analyzing HERVs in genomic data using a pipeline of bowtie2 for alignment, samtools for processing,
-    and bedtools.
-  doc_url: https://github.com/AuslanderLab/ervmancer
+  summary: Tool to quantify Human Endogenous Retrovirus (HERV) short read RNA sequencing expression data.
+  description: ERVmancer is a bioinformatics tool to quantify Human Endogenous Retrovirus (HERV) short read RNA sequencing expression data by aligning short reads to a curated subset of HERVs and then resolving ambiguity in alignment using a pre-computed HERV phylogenetic tree.
   dev_url: https://github.com/AuslanderLab/ervmancer
 
 extra:
   recipe-maintainers:
     - bryantduong
+    - RNAPolymerase12
