--- a/meta.yaml
+++ b/meta.yaml
@@ -26,12 +26,11 @@ requirements:
     - setuptools>=1.4.0
     - pip
   run:
-    - python >=3.8
-    - bowtie2
-    - samtools
-    - bedtools
-    - numpy
-    - pandas
+    - bowtie2 >= 2.4.2
+    - samtools >= 1.2
+    - bedtools >= 2.29.2
+    - numpy >= 1.23.5
+    - pandas >= 2.2.2
     - tqdm
     - regex
 
