--- a/meta.yaml
+++ b/meta.yaml
@@ -10,11 +10,10 @@ source:
 
 build:
   number: 0
-  no_git_env_vars: True
   noarch: python
-  script: "{{ PYTHON }} -m pip install . --no-deps --no-build-isolation --no-cache-dir -vvv"
+  script: "{{ PYTHON }} -m pip install . --no-deps -v"
   entry_points:
-    - ervrmancer = ervmancer.main:main
+    - ervmancer = ervmancer.main:main
 
 requirements:
   channels:
@@ -22,15 +21,16 @@ requirements:
     - bioconda
     - defaults
   host:
-    - python >=3.8
-    - setuptools>=1.4.0
-    - pip
+    - python>=3.8
+    - setuptools
   run:
-    - bowtie2 >= 2.4.2
-    - samtools >= 1.2
-    - bedtools >= 2.29.2
-    - numpy >= 1.23.5
-    - pandas >= 2.2.2
+    - python>=3.8
+    - bowtie2
+    - samtools
+    - bedtools
+    - setuptools
+    - numpy
+    - pandas
     - tqdm
     - regex
 
@@ -43,9 +43,7 @@ about:
   license: MIT
   license_family: MIT
   license_file: LICENSE
-  summary: Tool to quantify Human Endogenous Retrovirus (HERV) short read RNA sequencing expression data.
-  description: ERVmancer is a bioinformatics tool to quantify Human Endogenous Retrovirus (HERV) short read RNA sequencing expression data by aligning short reads to a curated subset of HERVs and then resolving ambiguity in alignment using a pre-computed HERV phylogenetic tree.
-  dev_url: https://github.com/AuslanderLab/ervmancer
+  summary: "ERVmancer is a bioinformatics tool to quantify Human Endogenous Retrovirus (HERV) short read RNA sequencing expression data by aligning short reads to a curated subset of HERVs and then resolving ambiguity in alignment using a pre-computed HERV phylogenetic tree."
 
 extra:
   recipe-maintainers:
