--- a/.gitignore
+++ b/.gitignore
@@ -5,14 +5,21 @@ src/ervmancer/data/herv_path_dict.pkl
 src/ervmancer/data/hervs_genomic_coords.bed
 
 #Byte-compiled / optimized / DLL files
-output/*
 **/.DS_Store
 __pycache__/
 *.py[cod]
 *$py.class
 
-# metadata yaml file for bioconda build
+# user-defined files
 meta.yaml
+# Ignore files in output directory
+output/*.*
+# Ignore files in immediate subdirectories of output
+output/*/*.*
+# keep directories themselves
+!output/
+!output/*/
+
 
 # C extensions
 *.so
