chore: update main with the data loading using pkg_data; update typing checks for parameters using Python3 param typehints

--- a/.gitignore
+++ b/.gitignore
@@ -9,10 +9,8 @@ __pycache__/
 
 # user-defined files
 meta.yaml
+output
 output/*
-!output/*/
-!output/.gitkeep
-!output/*/.gitkeep
 
 # C extensions
 *.so
